--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Functional connectivity functions in matlab for MEG and EEG data. Use at your own risk! 
+Functional connectivity functions for MEG and EEG data. Use at your own risk! 
 
 Initially developed for my phd work at the University of Nottingham. See relevant publications:  
 "Brain oscillations, connectomes and neurophysiology" https://eprints.nottingham.ac.uk/56801/
