--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Functional connectivity functions for MEG and EEG data. Function descriptions are a work in progress, use at your own risk! 
+Functional connectivity functions for MEG and EEG data. REPOSITORY IS A WORK IN PROGRESS, use at your own risk! 
 
 See relevant publications:  
 "Brain oscillations, connectomes and neurophysiology" https://eprints.nottingham.ac.uk/56801/
